src/tess/tl/test/pass/test_forward_decl_not_needed.tl
#module main

// Declaration order does not matter
foo (x) { bar(x)        }
bar (x) { 42            }
main()  { foo(999) - 42 }
