src/tess/tl/test/fail/test_fail_undeclared_reassignment.tl
#module main
foo() {
    x = 5
    x
}
main() { foo() }
